--- a/css/global.css
+++ b/css/global.css
@@ -7,6 +7,8 @@ body, html {
 }
 #map {
     width: 100%;
+    height: 100%;
+    /* hotfix to set height at 100% for internet explorer */
     height: -o-calc(100% - 65px);
     /* opera */
     height: -webkit-calc(100% - 65px);
